--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "publish": "ng deploy --base-href=https://mrh-jishan.github.io/foody-landing-page/ --repo=git@github.com:mrh-jishan/foody-landing-page.git --name='mrh-jishan' --email=robiul.hassan12102@gmail.com",
+    "publish": "ng deploy --base-href=/foody-landing-page/ --repo=git@github.com:mrh-jishan/foody-landing-page.git --name='mrh-jishan' --email=robiul.hassan12102@gmail.com",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
