fix project name issue

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,8 +3,8 @@ version: 0.2
 env:
   variables:
     S3_BUCKET: "beliciousbd"
-APP_NAME: "foody-landing-page"
-BUILD_ENV: "prod"
+    APP_NAME: "foody-landing-page"
+    BUILD_ENV: "prod"
 
 phases:
   install:
@@ -33,5 +33,5 @@ phases:
       - aws s3 rm s3://${S3_BUCKET} --recursive
       - echo S3 bucket is cleared.
       # Copy dist folder to S3 bucket, As of Angular 6, builds are stored inside an app folder in distribution and not at the root of the dist folder
-      - aws s3 cp dist s3://${S3_BUCKET} --recursive
+      - aws s3 cp dist/{$APP_NAME} s3://${S3_BUCKET} --recursive
       - echo Build completed on `date`
