--- a/buildspec.yml
+++ b/buildspec.yml
@@ -34,5 +34,6 @@ phases:
       - echo S3 bucket is cleared.
       # Copy dist folder to S3 bucket, As of Angular 6, builds are stored inside an app folder in distribution and not at the root of the dist folder
       - aws s3 cp dist/${APP_NAME} s3://${S3_BUCKET} --recursive
-      - aws cloudfront create-invalidation --distribution-id E2X5EKBPBRTUYH --paths "/*"
+      - aws cloudfront create-invalidation --distribution-id=E2X5EKBPBRTUYH --paths="/*"
+      - aws cloudfront create-invalidation --distribution-id=EC12JZXKHYJ0X --paths="/*"
       - echo Build completed on `date`
