--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "ngx-modal-dialog": "^3.0.0",
+    "ngx-useful-swiper": "^9.0.0",
     "popper.js": "^1.16.0",
     "rxjs": "~6.4.0",
+    "swiper": "^5.3.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
@@ -37,6 +39,7 @@
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
+    "@types/swiper": "^5.2.1",
     "angular-cli-ghpages": "^0.6.0",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
